--- a/test-three/templates/layouts/presentation.pug
+++ b/test-three/templates/layouts/presentation.pug
@@ -41,7 +41,7 @@ html
       link#theme(rel="stylesheet" href= `css/theme/${config.theme}.css`)
 
     //- Syntax highlighting
-    link(rel="stylesheet" href="lib/css/zenburn.css")
+    link(rel="stylesheet" href="lib/css/coshx-code.css")
 
 
     //- Add extra styles using this block
