add syntax highlighting style sheets; begin customizing syntax highlighting

--- a/test-three/templates/layouts/presentation.pug
+++ b/test-three/templates/layouts/presentation.pug
@@ -41,8 +41,18 @@ html
       link#theme(rel="stylesheet" href= `css/theme/${config.theme}.css`)
 
     //- Syntax highlighting
-    link(rel="stylesheet" href="lib/css/coshx-code.css")
-
+    link(rel="stylesheet" href="lib/css/docco.css")
+    //- coshx-code.css
+    //- atelier-forest-dark.css
+    //- atelier-heath-dark.css
+    //- atelier-lakeside-dark.css ***
+    //- hybrid.css *
+    //- docco.css ***
+    //- github.css
+    //- magula.css
+    //- qtcreator_dark.css ***
+    //- tomorrow-night-blue.css
+    //- xt256.css *
 
     //- Add extra styles using this block
     block styles
