--- a/test-three/css/theme/coshx.css
+++ b/test-three/css/theme/coshx.css
@@ -136,8 +136,8 @@ body {
   margin: 20px auto;
   padding: 5px;
   font-style: italic;
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 0px 2px #0229bf82; }
 
 .reveal blockquote p:first-child,
 .reveal blockquote p:last-child {
@@ -321,7 +321,8 @@ body {
     font-family: 'Noto Sans', sans-serif;
     font-size: 0.6em;
     font-weight: 700;
-    color: #d3d3cf;
+    /* color: #d3d3cf; */
+    color: #0229bf;
     /*float: right;*/
 }
 
@@ -333,10 +334,11 @@ body {
     content: '\201D';
     position: absolute;
     top: 0.28em;
-    right: 0;
+    right: 0.1em;
     font-size: 6em;
     font-style: italic;
-    color: #e7e6e4;
+    /* color: #e7e6e4; */
+    color: #0229bf82;
     z-index: -1;
 }
 
