--- a/test-three/templates/layouts/presentation.pug
+++ b/test-three/templates/layouts/presentation.pug
@@ -15,7 +15,8 @@ block config
       theme: 'coshx',
     };
   -
-
+  - var backgroundLink = '/images/coshx-background.png';
+//- +slide(data-background-size="contain" data-background-image="/images/coshx-background.png")
 doctype html
 html
 
