--- a/test-three/templates/layouts/presentation.pug
+++ b/test-three/templates/layouts/presentation.pug
@@ -15,7 +15,7 @@ block config
       theme: 'coshx',
     };
   -
-  - var backgroundLink = '/images/coshx-background.png';
+  - var background = { image: '/images/coshx-background.png', size: 'contain'}
 //- +slide(data-background-size="contain" data-background-image="/images/coshx-background.png")
 doctype html
 html
